comenzada implementacion de tile entity

--- a/src/main/resources/assets/sac/lang/en_us.lang
+++ b/src/main/resources/assets/sac/lang/en_us.lang
@@ -1,7 +1,8 @@
 
 //Items
-item.rose.name=Rose Diamond
+item.sac.rose.name=Rose Gold
 
 //Blocks
-tile.rose_block.name=Rose Gold Block
-tile.rose_block.name=Rose Gold Ore 
+tile.sac.rose_block.name=Rose Gold Block
+tile.sac.rose_block.name=Rose Gold Ore 
+tile.sac.catalyzer_block.name=Catalyzer 
